incfly/bootstrap.yaml
---
node:
  id: 'a2'
  cluster: 'd2'
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filter_chain_match:
        # empty
      filters:
      - config:
          codec_type: auto
          http_filters:
          - config: {}
            name: envoy.router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - "*"
              name: service
              routes:
              - match:
                  prefix: "/"
                route: { cluster: tls_by_label }
          stat_prefix: tls_by_label
        name: envoy.http_connection_manager
  clusters:
  - connect_timeout: 0.25s
    tls_context:
      common_tls_context:
        tls_certificates:
          - certificate_chain: { filename: "./test/config/integration/certs/clientcert.pem" }
            private_key: { filename: "./test/config/integration/certs/clientkey.pem" }
    tls_context_overrides:
      mtlsReady:
        common_tls_context:
          tls_certificates:
            - certificate_chain: { filename: "./test/config/integration/certs/clientcert.pem" }
              private_key: { filename: "./test/config/integration/certs/clientkey.pem" }
      mtlsDisable: {}
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 9000
    lb_policy: round_robin
    name: tls_by_label
    type: eds
    eds_cluster_config:
      eds_config: { path: "./incfly/eds.yaml" }
